--- a/angular-10-client/src/app/app.component.html
+++ b/angular-10-client/src/app/app.component.html
@@ -3,7 +3,13 @@
     <a href="#" class="navbar-brand">Eclectics</a>
     <ul class="navbar-nav mr-auto" routerLinkActive="active">
       <li class="nav-item">
-        <a href="/home" class="nav-link" routerLink="home">Apply for Loans </a>
+        <a href="/home" class="nav-link" routerLink="home">Home </a>
+      </li>
+      <li class="nav-item">
+        <a href="/applyLoans" class="nav-link" *ngIf="isLoggedIn" routerLink="applyLoans">Apply for Loans</a>
+      </li>
+      <li class="nav-item">
+        <a href="/CheckLoanLimitComponent" class="nav-link" *ngIf="isLoggedIn" routerLink="CheckLoanLimitComponent">Check Loan Limit</a>
       </li>
       <li class="nav-item" *ngIf="showAdminBoard">
         <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
@@ -12,7 +18,7 @@
         <a href="/mod" class="nav-link" routerLink="mod">Moderator Board</a>
       </li>
       <li class="nav-item">
-        <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">Check for Loans</a>
+        <a href="/user" class="nav-link" *ngIf="isLoggedIn" routerLink="user">User</a>
       </li>
     </ul>
 
