--- a/angular-10-client/src/app/app.component.html
+++ b/angular-10-client/src/app/app.component.html
@@ -9,7 +9,7 @@
         <a href="/applyLoans" class="nav-link" *ngIf="isLoggedIn" routerLink="applyLoans">Apply for Loans</a>
       </li>
       <li class="nav-item">
-        <a href="/CheckLoanLimitComponent" class="nav-link" *ngIf="isLoggedIn" routerLink="CheckLoanLimitComponent">Check Loan Limit</a>
+        <a href="/CheckLoanLimitComponent" class="nav-link" *ngIf="isLoggedIn" routerLink="CheckLoanLimitComponent">All Customers</a>
       </li>
       <li class="nav-item" *ngIf="showAdminBoard">
         <a href="/admin" class="nav-link" routerLink="admin">Admin Board</a>
